--- a/template.yaml
+++ b/template.yaml
@@ -528,8 +528,15 @@ Resources:
                 - !Sub
                   - arn:${AWS::Partition}:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${tableName}/index/*
                   - { tableName: !Ref UsersDDBTable}
+                - !Sub
+                  - arn:${AWS::Partition}:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${tableName}
+                  - { tableName: !Ref UsersToTrackingLocationDDBTable}
+                - !Sub
+                  - arn:${AWS::Partition}:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${tableName}/index/*
+                  - { tableName: !Ref UsersToTrackingLocationDDBTable}
       Environment:
         Variables:
+          USERS_TO_TRACKING_DDB_TABLE_NAME: !Ref UsersToTrackingLocationDDBTable
           USERS_DDB_TABLE_NAME: !Ref UsersDDBTable
   GetMentorsFunction: # Function for getting all users who are mentors
     Type: AWS::Serverless::Function # https://docs.aws.amazon.com/serverless-application-model/latest/developerguide/sam-resource-function.html
@@ -603,7 +610,7 @@ Resources:
         Variables:
           USERS_TO_TRACKING_DDB_TABLE_NAME: !Ref UsersToTrackingLocationDDBTable
           USERS_DDB_TABLE_NAME: !Ref UsersDDBTable
-          TRACKING_LOCATIONS_TO_COMPETENCIES_DDB: !Ref TrackingLocationToCompetenciesDDBTable
+          TRACKING_LOCATIONS_TO_COMPETENCIES_DDB_TABLE_NAME : !Ref TrackingLocationToCompetenciesDDBTable
   ############ DynamoDB Databases ############
   CompetenciesMasterDDBTable: # Master table to store info about each competency
     Type: AWS::DynamoDB::Table
