--- a/template.yaml
+++ b/template.yaml
@@ -503,16 +503,52 @@ Resources:
         Variables:
           USERS_DDB_TABLE_NAME: !Ref UsersDDBTable
   GetStudentsForSpecificMentorFunction: # Function for getting all students assigned to a specific mentor
+                                  Type: AWS::Serverless::Function # https://docs.aws.amazon.com/serverless-application-model/latest/developerguide/sam-resource-function.html
+                                  Properties:
+                                    CodeUri: functions/users/mentors/{userId}/students
+                                    Handler: get.lambdaHandler
+                                    Runtime: nodejs12.x
+                                    Events:
+                                      GetEvaluationsForUser:
+                                        Type: Api
+                                        Properties:
+                                          Path: /users/mentors/{userId}/students
+                                          Method: get
+                                    Policies: # Lists permissions; what is this lambda allowed to do/interact with?
+                                      - Statement:
+                                          - Sid: DynamoDBGetPolicy # Creates a specific, custom inline policy
+                                            Effect: Allow
+                                            Action:
+                                              - dynamodb:GetItem
+                                              - dynamodb:Scan
+                                            Resource:
+                                              - !Sub
+                                                - arn:${AWS::Partition}:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${tableName}
+                                                - { tableName: !Ref UsersDDBTable}
+                                              - !Sub
+                                                - arn:${AWS::Partition}:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${tableName}/index/*
+                                                - { tableName: !Ref UsersDDBTable}
+                                              - !Sub
+                                                - arn:${AWS::Partition}:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${tableName}
+                                                - { tableName: !Ref UsersToTrackingLocationDDBTable}
+                                              - !Sub
+                                                - arn:${AWS::Partition}:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${tableName}/index/*
+                                                - { tableName: !Ref UsersToTrackingLocationDDBTable}
+                                    Environment:
+                                      Variables:
+                                        USERS_TO_TRACKING_DDB_TABLE_NAME: !Ref UsersToTrackingLocationDDBTable
+                                        USERS_DDB_TABLE_NAME: !Ref UsersDDBTable
+  GetMentorsForSpecificStudentFunction: # Function for getting all students assigned to a specific mentor
     Type: AWS::Serverless::Function # https://docs.aws.amazon.com/serverless-application-model/latest/developerguide/sam-resource-function.html
     Properties:
-      CodeUri: functions/users/mentors/{userId}/students
+      CodeUri: functions/users/students/{userId}/mentors
       Handler: get.lambdaHandler
       Runtime: nodejs12.x
       Events:
         GetEvaluationsForUser:
           Type: Api
           Properties:
-            Path: /users/mentors/{userId}/students
+            Path: /users/students/{userId}/mentors
             Method: get
       Policies: # Lists permissions; what is this lambda allowed to do/interact with?
         - Statement:
